--- a/searxng/settings.yml
+++ b/searxng/settings.yml
@@ -2,10 +2,17 @@
 use_default_settings: true
 server:
   # base_url is defined in the SEARXNG_BASE_URL environment variable, see .env and docker-compose.yml
-  secret_key: "ultrasecretkey"  # change this!
+  secret_key: "qjsdnweicwnecuiwencnweuicnnwdnciu"  # change this!
   limiter: true  # can be disabled for a private instance
   image_proxy: true
 ui:
   static_use_hash: true
+search:
+  safe_search: 0
+  autocomplete: "duckduckgo", "google"
+  default_lang: ""
+  formats:
+    - html
+    - json
 redis:
   url: redis://redis:6379/0
